# data-to-parquet

./: .gitignore  Cargo.toml  README.md  build_all.sh
python_lib/: .gitignore  README.md  hatch_build.py  pyproject.toml
python_lib/src/data_to_parquet_bin/: __init__.py
src/: lib.rs  main.rs
