[project]
name = "data-to-parquet-bin"
version = "0.1.1"
description = "A Python wrapper for data-to-parquet binary"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_to_parquet_bin"]
# 强制包含二进制文件
artifacts = ["src/data_to_parquet_bin/bin/*"]

[tool.hatch.build.targets.sdist]
include = ["src/data_to_parquet_bin"]
# 同样确保 sdist 包含二进制文件
artifacts = ["src/data_to_parquet_bin/bin/*"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
